# ROS2-Project

./: README.md
install/: local_setup.sh  setup.sh
install/my_package/include/Geometry/: Point.hpp
install/my_package/lib/my_package/: points_node
install/my_package/share/ament_index/resource_index/parent_prefix_path/: my_package
install/my_package/share/my_package/: local_setup.sh  package.sh  plugins.xml
log/: latest_build
my_package/: CMakeLists.txt  LICENSE  package.xml
my_package/src/: Point2D.cpp  Point3D.cpp  main.cpp  my_node  my_node.cpp
